{
    "search": "Search",
    "filter": "Filter",
    "startDate":"Start date",
    "startTime":"Start time",
    "selectDate":"Select date",
    "selectTime":"Select time",
    "duration":"Duration",
    "selectDuration":"Select duration",
    "selectPrice":"Select price",
    "createOffer":"Create offer",
    "next":"Next",
    "back":"Back",
    "complete":"Complete",
    "profile":"Profile",
    "modify":"Modify",
    "name":"Name",
    "dog":"Dog",
    "addNewDog":"Add new dog",
    "signOut":"Sign out",
    "modifyProfile":"Modify profile",
    "finalize":"Finalize",
    "maxPrice":"Max price",
    "addFilter":"Add filter",
    "welcome":"Welcome",
    "genericError":"Generic error",
    "signIn":"Sign in",
    "loading":"Loading",
    "wrongPassword":"Wrong password",
    "fOr":"for",
    "noFilter":"No filter",
    "insertValidPrice":"Insert valid price",
    "selectAtLeastOneActivity":"Select at least one activity",
    "home":"Home",
    "add":"Add",
    "settings":"Settings",
    "signUp":"Sign up",
    "dogProfile":"Dog profile",
    "nameCannotBeEmpty":"Name cannot be empty",
    "male":"Male",
    "female":"Female",
    "deleteDog":"Delete dog",
    "enterYourName":"Enter your name",
    "nameIsRequired":"Name is required",
    "km":"km",
    "showActivities":"Show activities",
    "hideActivities":"Hide activities",
    "addActivity":"Add activity",
    "enterMessage":"Enter message",
    "price":"Price",
    "location":"Location",
    "time":"Time",
    "confirm":"Confirm",
    "selectDogs":"Select dogs",
    "selectAtLeastADog":"Select at least a dog",
    "chat":"Chat",
    "myOffers":"My offers",
    "acceptedOffers":"Accepted offers",
    "selectedDogs":"Selected dogs",
    "orderSummary":"Order summary",
    "walkTheDog":"Walk the dog",
    "activities":"Activities",
    "orders":"Orders",
    "offerSummary":"Offer summary",
    "deleteOffer":"Delete offer",
    "biography":"Biography",
    "enterBiography":"Enter biography",
    "emailOrPasswordError":"Email or password error",
    "emailAlreadyRegistered":"Email already registered",
    "passwordTooWeak":"Password too weak",
    "maxDistance":"Max distance",
    "m":"m",
    "viewLiveLocation":"View live location",
    "liveLocation":"Live location",
    "shareLiveLocation":"Share live location",
    "liveLocationIsNotAvailable":"Live location is not available",
    "cantShareLocationYet":"Can't share location yet",
    "pickALocation":"Pick a location",
    "deleteOrder":"Delete order",
    "asOfferor":"As offeror",
    "asClient":"As client",
    "run":"Run",
    "swim":"Swim",
    "park":"Park"
}