...

  const TextInput.email({
    super.key,
    required this.textEditingController,
    bool? error,
    this.errorText,
    this.textFieldKey = const Key('email_text_input'),
  })  : hintText = 'Enter email',
        icon = Icons.email_outlined,
        obscureText = false,
        textInputType = TextInputType.text,
        maxLines = 1;

  const TextInput.password({
    super.key,
    required this.textEditingController,
    bool? error,
    this.errorText,
    this.textFieldKey = const Key('password_text_input'),
  })  : hintText = 'Enter password',
        icon = Icons.lock_outline,
        obscureText = true,
        textInputType = TextInputType.text,
        maxLines = 1;

...
