...
                      text: S.of(context).signIn,
                    ),
                    const SizedBox(
                      height: 50,
                    ),
                    Button(
                      key: const Key('sign_up_button'),
                      onPressed: () => Navigator.push(
                        context,
                        MaterialPageRoute(builder: (context) => SignUpScreen()),
                      ),
                      text: S.of(context).signUp,
                      primary: false,
...
