...
  @override
  Widget build(BuildContext context) {
    return Row(
      children: [
        Expanded(
          child: ShowText(
            key: const Key('day_picker_button'),
            backgroundColor:
                error ? Colors.red.withOpacity(.26) : Colors.black26,
            onPressed: () async {
              final DateTime? picked = await showDatePicker(
                context: context,
                initialDate: date ?? DateTime.now(),
...
        ),
        const SizedBox(
          width: spaceBetweenWidgets,
        ),
        Expanded(
          child: ShowText(
            key: const Key('time_picker_button'),
            backgroundColor:
                error ? Colors.red.withOpacity(.26) : Colors.black26,
            onPressed: () async {
              final TimeOfDay? picked = await showTimePicker(
                context: context,
                initialTime: date != null
...
